prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/sema_errors/uninitialized_binding.nut
// EXPECT_ERROR: "must be initialized"
let x
